--- a/index.ipynb
+++ b/index.ipynb
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Justin =f"
+    "Justin ='fun'"
    ]
   },
   {
