Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'let have a fun time'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'let havr a '"
+    "'let have a fun time'"
    ]
   },
   {
