--- a/index.ipynb
+++ b/index.ipynb
@@ -191,23 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "age = 14\n",
-    "age -"
+    "age = 14"
    ]
   },
   {
